--- a/playbook.yaml
+++ b/playbook.yaml
@@ -63,7 +63,7 @@
             loop_var: item
           ignore_errors: true
 
-        - name: **DEBUG: Print API response for each item**
+        - name: Print API response for each item
           ansible.builtin.debug:
             var: item
           loop: "{{ api_response.results }}"
